; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_maintenanced.c_MaintenanceDaemonShmemSize.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/utils/extr_maintenanced.c_MaintenanceDaemonShmemSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@max_worker_processes = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @MaintenanceDaemonShmemSize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @MaintenanceDaemonShmemSize() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  store i64 0, i64* %1, align 8
  store i64 0, i64* %2, align 8
  %3 = load i64, i64* %1, align 8
  %4 = call i64 @add_size(i64 %3, i64 4)
  store i64 %4, i64* %1, align 8
  %5 = load i32, i32* @max_worker_processes, align 4
  %6 = call i64 @hash_estimate_size(i32 %5, i32 4)
  store i64 %6, i64* %2, align 8
  %7 = load i64, i64* %1, align 8
  %8 = load i64, i64* %2, align 8
  %9 = call i64 @add_size(i64 %7, i64 %8)
  store i64 %9, i64* %1, align 8
  %10 = load i64, i64* %1, align 8
  ret i64 %10
}

declare dso_local i64 @add_size(i64, i64) #1

declare dso_local i64 @hash_estimate_size(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
